--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-codemirror2": "^6.0.0",
     "react-dom": "^16.8.6",
     "reason-react": "^0.7.0",
+    "serialize-javascript": "2.1.1",
     "sjcl": "^1.0.8"
   },
   "resolutions": {
